fixed a bug in the right and left gaps slider

--- a/sass/base/_general.scss
+++ b/sass/base/_general.scss
@@ -11,16 +11,8 @@ body {
   font-size: 16px;
 
   * {
-    outline: none !important;
-    box-sizing: border-box !important;
-  }
-
-  p:empty {
-    display: none;
-  }
-
-  h2:empty {
-    display: none;
+    outline: none;
+    box-sizing: border-box;
   }
 }
 
